[gd_scene load_steps=7 format=3 uid="uid://ctpwqpgosom54"]

[ext_resource type="Texture2D" uid="uid://bar3ji0imx0xj" path="res://Assets/2D Assets/Icons/ettercap-logo.jpg" id="1_1yqt1"]
[ext_resource type="Script" uid="uid://dowle5kcyix4l" path="res://Scenes/PCUI/window_base.gd" id="1_5qgr0"]
[ext_resource type="Script" uid="uid://dwjg3d1dao6cn" path="res://Scenes/PCUI/etter_cap.gd" id="1_k76ms"]
[ext_resource type="PackedScene" uid="uid://icio83uyyvtn" path="res://Scenes/PCUI/scan_net.tscn" id="4_cx7gr"]
[ext_resource type="PackedScene" uid="uid://b0n0s0o8hnx5p" path="res://Scenes/PCUI/EtterCap/mitm.tscn" id="5_ouopf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cfabj"]
texture = ExtResource("1_1yqt1")

[node name="EtterCap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -896.0
offset_bottom = -552.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k76ms")

[node name="WindowBase" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5qgr0")

[node name="PanelContainer" type="PanelContainer" parent="WindowBase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_cfabj")

[node name="VBoxContainer" type="VBoxContainer" parent="WindowBase/PanelContainer"]
layout_mode = 2

[node name="ScanButton" type="Button" parent="WindowBase/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ScanButton "

[node name="MITMButton" type="Button" parent="WindowBase/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "MITMButton"

[node name="ARPButton" type="Button" parent="WindowBase/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ARPButton "

[node name="ExitButton" type="Button" parent="WindowBase/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit"

[node name="ScanNet" parent="." instance=ExtResource("4_cx7gr")]
visible = false
layout_mode = 1
offset_right = -148.4
offset_bottom = 74.824

[node name="MITM" parent="." instance=ExtResource("5_ouopf")]
visible = false
layout_mode = 1
offset_right = -347.0
offset_bottom = -88.0

[connection signal="pressed" from="WindowBase/PanelContainer/VBoxContainer/ScanButton" to="." method="_on_scan_button_pressed"]
[connection signal="pressed" from="WindowBase/PanelContainer/VBoxContainer/MITMButton" to="." method="_on_mitm_button_pressed"]
[connection signal="pressed" from="WindowBase/PanelContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
